# OpenPerso

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 11d8c9a5e49d_add_user_tier_and_is_admin.py  2693ecb69366_add_featured_and_reports.py  6107cfb5fa78_initial_schema.py  a1b2c3d4e5f6_add_message_image_audio_url.py
backend/app/: config.py  database.py  main.py  redis.py
backend/app/api/v1/: admin.py  auth.py  chat.py  explore.py  files.py  guest.py  memories.py  personas.py  router.py  sitemap.py  users.py  voice.py
backend/app/core/: deps.py  exceptions.py  security.py
backend/app/models/: conversation.py  memory.py  persona.py  user.py
backend/app/schemas/: auth.py  chat.py  persona.py
backend/app/services/: auth.py  background_tasks.py  chat.py  image_gen.py  llm.py  memory.py  persona.py  persona_gen.py  storage.py  tts.py  usage.py
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: seed_personas.py
docs/: PLANNING.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json  robots.txt  sw.js
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/components/: error-boundary.tsx
frontend/src/hooks/: use-auth.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
nginx/: nginx.conf
(+23 files in other folders)
