[project]
name = "openperso"
version = "0.1.0"
description = "OpenPerso - Open-source AI character chat platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "openai>=1.57.0",
    "celery[redis]>=5.4.0",
    "redis[hiredis]>=5.0",
    "python-multipart>=0.0.18",
    "minio>=7.2.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.11",
    "email-validator>=2.3.0",
    "bcrypt<5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
